# project_tracker

./: Cargo.toml
src/: main.rs
src/data/: app_data.rs  mod.rs  project.rs  skill.rs  task.rs
src/views/: all_projects_view.rs  mod.rs  new_project_view.rs
